# challenge-validator

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
challenge_validator/: __init__.py  cli.py  profiles.py  reporter.py  runner.py
challenge_validator/profiles/: aws_waf.yaml  cloudflare.yaml  generic.yaml  hcaptcha.yaml  recaptcha.yaml
challenge_validator/tests/: base.py  cors_api.py  degradation.py  performance_ux.py  post_challenge.py  score_handling.py  session_cookies.py  token_lifecycle.py
docs/: api-content-type.md  aws-waf-integration.md  challenge-block-loop.md  cookie-cross-subdomain.md  cors-preflight.md  mobile-sdk-integration.md  score-double-punishment.md  spa-token-refresh.md
docs/framework-guides/: flutter-amplify.md  nextjs-ssr.md  remix.md  spa-api-gateway.md
tests/: test_classifier.py
tests/fixtures/: sample_responses.json
